--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ meta_generator: true
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 ## Use post's date for updated date unless set in front-matter
-use_date_for_updated: false
+updated_option: false
 
 # Pagination
 ## Set per_page to 0 to disable pagination
@@ -95,9 +95,13 @@ ignore:
 ## Themes: https://hexo.io/themes/
 theme: next_iPanda
 
+leancloud_counter_security:
+  enable_sync:true
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/ipandaboy/ipandaboy.github.io.git
+  token: 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
+  repo: git@github.com:ipandaboy/ipandaboy.github.io.git
   branch: master
