--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: iPanda
+title: iPandaBoy
 subtitle: ''
 description: '做一条最闲的咸鱼'
 keywords:
-author: iPananBoy
+author: iPandaBoy
 language: zh-CN
 timezone: ''
 
